test/tests/compiler/13_floating-point_numbers/invalid_lex/missing_negative_exponent.plx
pub fn main(none) i32 {
    # The exponent on a floating-point constant must be an integer,
    # not just a negative sign.
    #
    foo: f64 = 24e-
}
